--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,19 @@
   text-align: center;
 }
 
+html {
+  background-image: url('https://images.unsplash.com/photo-1505506874110-6a7a69069a08?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2468&q=80');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+img {
+  width: 50%;
+  border-radius: 10px;
+  border: 10px inset #A0A0A0;
+  animation: fadeIn ease 7s;
+  }
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
